--- a/app/Resources/views/course_info/closing_remarks/closing_remarks.html.twig
+++ b/app/Resources/views/course_info/closing_remarks/closing_remarks.html.twig
@@ -8,7 +8,7 @@
         >
             <div class="card-header">
                 <div class="d-flex justify-content-between">
-                    <h3>{{ 'app.closing_remarks.view.closing_remarks' | trans }}</h3>
+                    <h3 class="text-blue-title">{{ 'app.closing_remarks.view.closing_remarks' | trans }}</h3>
                     <button type="button" class="edit-button btn button-orange" data-title="{{ 'app.closing_remarks.view.edit' | trans }}">
                         {{ 'app.closing_remarks.view.edit' | trans }}
                     </button>
