--- a/app/Resources/views/course_info/evaluation/evaluation.html.twig
+++ b/app/Resources/views/course_info/evaluation/evaluation.html.twig
@@ -47,7 +47,7 @@
         >
             <div class="card-header">
                 <div class="d-flex justify-content-between">
-                    <h3>{{ 'app.evaluation.view.info_evaluation' | trans }}</h3>
+                    <h3 class="text-blue-title">{{ 'app.evaluation.view.info_evaluation' | trans }}</h3>
                     <button type="button" class="edit-button btn button-orange" data-title="{{ 'app.evaluation.view.edit' | trans }}">
                         {{ 'app.evaluation.view.edit' | trans  }}
                     </button>
