--- a/app/Resources/views/course_info/objectives_course/objectives_course.html.twig
+++ b/app/Resources/views/course_info/objectives_course/objectives_course.html.twig
@@ -8,7 +8,7 @@
         >
             <div class="card-header">
                 <div class="d-flex justify-content-between">
-                    <h3>{{ 'app.objectives.view.aimed_capacities' | trans }}</h3>
+                    <h3 class="text-blue-title">{{ 'app.objectives.view.aimed_capacities' | trans }}</h3>
                     <button type="button"
                             class="btn button-orange modal-action"
                             data-action-title="{{ 'app.objectives.view.add_capacity' | trans }}"
