--- a/app/Resources/views/course_info/permission/index.html.twig
+++ b/app/Resources/views/course_info/permission/index.html.twig
@@ -38,7 +38,7 @@
         <div class="card">
             <div class="card-header">
                 <div class="d-flex justify-content-between">
-                    <h3>{{ 'app.permission.view.permissions_list' | trans }}</h3>
+                    <h3 class="text-blue-title">{{ 'app.permission.view.permissions_list' | trans }}</h3>
                     <button type="button" class="btn button-orange float-right" data-toggle="modal" data-target="#modal-add-permission">
                         {{ 'app.permission.button.add_permission' | trans }}
                     </button>
