--- a/app/Resources/views/course_info/equipment/equipment.html.twig
+++ b/app/Resources/views/course_info/equipment/equipment.html.twig
@@ -7,7 +7,7 @@
         >
             <div class="card-header">
                 <div class="d-flex justify-content-between">
-                    <h3>{{ 'app.equipment.view.equipment' | trans }}</h3>
+                    <h3 class="text-blue-title">{{ 'app.equipment.view.equipment' | trans }}</h3>
                 </div>
             </div>
             <div class="card-body">
@@ -20,7 +20,7 @@
         >
             <div class="card-header">
                 <div class="d-flex justify-content-between">
-                    <h3>{{ 'app.equipment.view.resources' | trans }}</h3>
+                    <h3 class="text-blue-title">{{ 'app.equipment.view.resources' | trans }}</h3>
                     <button type="button" class="edit-button btn button-orange" data-title="{{ 'app.equipment.view.edit' | trans }}">
                         {{ 'app.equipment.view.edit' | trans }}
                     </button>
