--- a/app/Resources/views/course_info/presentation/presentation.html.twig
+++ b/app/Resources/views/course_info/presentation/presentation.html.twig
@@ -9,7 +9,7 @@
         >
             <div class="card-header">
                 <div class="d-flex justify-content-between">
-                    <h3>{{ 'app.presentation.view.general.label' | trans }}</h3>
+                    <h3 class="text-blue-title">{{ 'app.presentation.view.general.label' | trans }}</h3>
                     <button type="button" class="button-orange edit-button btn" data-title="{{ 'app.general.button.edit' | trans }}">
                         {{ 'app.general.button.edit' | trans }}
                     </button>
@@ -24,7 +24,7 @@
         >
             <div class="card-header">
                 <div class="d-flex justify-content-between">
-                    <h3>{{ 'app.presentation.view.teachers.label' | trans }}</h3>
+                    <h3 class="text-blue-title">{{ 'app.presentation.view.teachers.label' | trans }}</h3>
                     <button type="button" class="button-orange btn modal-action"
                             data-action-title="{{ 'app.presentation.view.teachers.add_teacher' | trans }}"
                             data-action-url="{{ path('app.course_info.presentation.teachers.add', {'id': courseInfo.id }) }}">
@@ -42,7 +42,7 @@
         >
             <div class="card-header">
                 <div class="d-flex justify-content-between">
-                    <h3>{{ 'app.presentation.view.teaching_mode.label' | trans }}</h3>
+                    <h3 class="text-blue-title">{{ 'app.presentation.view.teaching_mode.label' | trans }}</h3>
                     <button type="button" class="button-orange edit-button btn" data-title="{{ 'app.general.button.edit' | trans }}">
                         {{ 'app.general.button.edit' | trans }}
                     </button>
