--- a/app/Resources/views/course_info/info/form/info.html.twig
+++ b/app/Resources/views/course_info/info/form/info.html.twig
@@ -17,7 +17,7 @@
             data-url="{{ path('app.course_info.info.info', {'id': courseInfo.id, 'action': 'submit' }) }}">
         {{ 'app.info.form.save' | trans }}
     </button>
-    <button type="button" class="btn-link btn text-black"
+    <button type="button" class="btn-link btn text-black cancel-button"
             data-url="{{ path('app.course_info.info.info', {'id': courseInfo.id, 'action': 'cancel' }) }}">
         <u>{{ 'app.info.form.cancel' | trans }}</u>
     </button>
