--- a/app/Resources/views/course_info/permission/index.html.twig
+++ b/app/Resources/views/course_info/permission/index.html.twig
@@ -23,7 +23,7 @@
                     </div>
                 </div>
                 <div class="modal-footer justify-content-between">
-                    <button type="button" class="btn-link btn text-black" data-dismiss="modal"><u>{{ 'app.permission.button.close' | trans }}</u></button>
+                    <button type="button" class="btn-link btn text-black cancel-button" data-dismiss="modal"><u>{{ 'app.permission.button.close' | trans }}</u></button>
                     <button type="submit" class="btn button-orange">{{ 'app.permission.button.add' | trans }}</button>
                 </div>
                 {{ form_end(form) }}
