--- a/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
+++ b/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
@@ -98,7 +98,7 @@
     <button type="submit" class="submit-button btn button-orange submit" data-url="{{ path('app.course_info.presentation.teaching_mode', {'id': courseInfo.id}) }}">
         {{ 'app.general.button.save' | trans }}
     </button>
-    <button type="button" class="btn-link btn text-black" data-url="{{ path('app.course_info.presentation.teaching_mode', {'id': courseInfo.id}) }}">
+    <button type="button" class="btn-link btn text-black cancel-button" data-url="{{ path('app.course_info.presentation.teaching_mode', {'id': courseInfo.id}) }}">
         <u>{{ 'app.general.button.cancel' | trans }}</u>
     </button>
 </div>
