Add a progress info to Job + use it for import apogee courses command

--- a/app/Resources/views/job/index.html.twig
+++ b/app/Resources/views/job/index.html.twig
@@ -43,6 +43,7 @@
                         <th class="sortable">{{ knp_pagination_sortable(pagination, 'Statut', 'c.lastStatus') }}</th>
                         <th class="sortable">{{ knp_pagination_sortable(pagination, 'Date d\'excecution', 'c.lastUseStart') }}</th>
                         <th class="sortable">{{ knp_pagination_sortable(pagination, 'Fin d\'excecution', 'c.lastUseEnd') }}</th>
+                        <th class="sortable">{{ knp_pagination_sortable(pagination, 'Progression', 'c.progress') }}</th>
                         <th class="sortable">{{ knp_pagination_sortable(pagination, 'Fréquence', 'c.frequencyJobFormat') }}</th>
                         <th class="sortable">{{ knp_pagination_sortable(pagination, 'Immédiat', 'c.immediately') }}</th>
                         <th >Actions</th>
@@ -69,6 +70,11 @@
                                 {%  if job.lastUseEnd %}
                                     le {{  job.lastUseEnd|date('d-m-Y à h-i-s') }}
                                 {% endif %}
+                            </td>
+                            <td>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="{{ job.progress }}" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
                             </td>
                             <td>{{ job.frequencyJobFormat }}</td>
                             <td>{{ job.immediately|humanizeBoolean }}</td>
