--- a/app/Resources/views/job/index.html.twig
+++ b/app/Resources/views/job/index.html.twig
@@ -109,7 +109,7 @@
 
                                 {% if is_granted('ROLE_ADMIN_JOB_DELETE') %}
                                     {% if(job.lastStatus == constant('AppBundle\\Constant\\Job::STATUS_IN_PROGRESS')) %}
-                                        <a class="btn btn-sm btn-primary disabled">
+                                        <a class="btn btn-sm btn-danger disabled">
                                             <i class="fas fa-trash"></i>
                                         </a>
                                     {% else %}
