Fix Job progressbar

--- a/app/Resources/views/job/index.html.twig
+++ b/app/Resources/views/job/index.html.twig
@@ -73,7 +73,7 @@
                             </td>
                             <td>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="{{ job.progress }}" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="{{ job.progress }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ job.progress }}%;"></div>
                                 </div>
                             </td>
                             <td>{{ job.frequencyJobFormat }}</td>
