--- a/app/Resources/views/course_info/dashboard/dashboard.html.twig
+++ b/app/Resources/views/course_info/dashboard/dashboard.html.twig
@@ -32,6 +32,7 @@
     <div class="pt-3">
     <div id="card-dashboard" class="card my-2 shadow card-syllabus"
          data-view-url="{{ path('app.course_info.dashboard.dashboard', {'id': courseInfo.id }) }}"
+         style="background-color: #F4F6F9;"
     >
         <div class="card-header">
             <div class="d-flex justify-content-between">
