margin general description

--- a/app/Resources/views/course_info/presentation/view/general.html.twig
+++ b/app/Resources/views/course_info/presentation/view/general.html.twig
@@ -84,7 +84,7 @@
         <dt>
             <img class="icon-20" src="{{ asset('/build/images/black_info_picto.png') }}"/>
             {{ 'app.presentation.view.general.description' | trans }}
-            <div>
+            <div class="mb-2">
                 <small>
                     {{ 'app.presentation.view.general.description_message' | trans }}
                     <a class="btn-link" href="https://pixabay.com/fr/" target="_blank"><u>https://pixabay.com/fr/</u></a>
