--- a/app/Resources/views/course_info/view/_student_activities_card.html.twig
+++ b/app/Resources/views/course_info/view/_student_activities_card.html.twig
@@ -18,8 +18,14 @@
                                         : {{ act.description }}
                                     {% endif %}
                                 </span>
-                                {% if act.evaluationPeer %}<span class="badge badge-primary rounded float-right mr-2">{{ 'app.activities.view.activity.evaluated_peers' | trans }}</span>{% endif %}
-                                {% if act.evaluationTeacher %}<span class="badge badge-primary rounded float-right mr-2">{{ 'app.activities.view.activity.evaluated_teachers' | trans }}</span>{% endif %}
+                                {% if act.evaluationPeer %}<span class="badge badge-primary rounded float-right mr-2">
+                                    {{ 'app.activities.view.activity.evaluated_peers' | trans }}
+                                    </span>
+                                {% endif %}
+                                {% if act.evaluationTeacher %}<span class="badge badge-primary rounded float-right mr-2">
+                                    {{ 'app.activities.view.activity.evaluated_teachers' | trans }}
+                                    </span>
+                                {% endif %}
                                 <span class="badge badge-danger rounded float-right mr-2">
                                     {{ (act.evaluationCt ? 'ct' : 'cc') | trans }} ({{ act.evaluationRate }}%)
                                 </span>
